// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/molecules/PopupMenuList.vue snapshot default 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        item1 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        item2 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        item3 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot focused item 1`] = `
<div
  class="popup-menu-list-wrapper"
  style="transform: translateY(-26px);"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        item1 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        item2 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        item3 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with children 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <!--v-if-->
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        item1 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        item2 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        item3 
        <svg
          class="right-arrow"
          transform="rotate(90) scale(1, 1)"
          viewBox="0 0 10 10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            class="fill-background-second"
            height="10"
            stroke="none"
            width="10"
          />
          <path
            class="fill-background"
            d="M2 7L8 7L5 2z"
            stroke="none"
            stroke-linejoin="round"
          />
        </svg>
      </button>
      <div
        class="popup-menu-list-wrapper children"
        style="top: 51px;"
      >
        <!--v-if-->
        <ul>
          
          <li>
            <button
              data-test-id="child1"
              type="button"
            >
              child1 
              <!--v-if-->
            </button>
            <!--v-if-->
          </li>
          <li>
            <button
              data-test-id="child2"
              type="button"
            >
              child2 
              <!--v-if-->
            </button>
            <!--v-if-->
          </li>
          
        </ul>
      </div>
    </li>
    
  </ul>
</div>
`;

exports[`src/components/molecules/PopupMenuList.vue snapshot with search field 1`] = `
<div
  class="popup-menu-list-wrapper"
>
  <div
    class="keyword-block"
  >
    <div
      class="input-wrapper"
    >
      <input
        type="text"
      />
      <!--v-if-->
    </div>
  </div>
  <ul>
    
    <li>
      <button
        data-test-id="item1"
        type="button"
      >
        item1 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item2"
        type="button"
      >
        item2 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    <li>
      <button
        data-test-id="item3"
        type="button"
      >
        item3 
        <!--v-if-->
      </button>
      <!--v-if-->
    </li>
    
  </ul>
</div>
`;
